# OpenKAI

./: .gitignore  AutoPilot.cpp  AutoPilot.h  CMakeLists.txt  CMakeLists_SSD.txt  CameraVision.cpp  CameraVision.h  LAB  LAB.cpp  Logger.h  MavlinkInterface.h  OpenCVdrone.cpp  OpenKAI.kdev4  OpenKAI_vscode.code-workspace  README.md  SerialPort.cpp  SerialPort.h  build-jetson.sh  build-jetson.sh~  build.sh  build.sh~  build2.sh  build2.sh~  common.h  defaultparam.h  imgui.ini  package.xml  platform.h  setup_Ubuntu16.04LTS.txt  util.h
.kdev4/: OpenKAI.kdev4
Log/: OrbbecSDK.log.txt
data/LandingPad/: ArucoPad_Tag16h5.ai
data/Livox/: HAP_config.json  mid360_200.json  mid360_200_140.json  mid360_201.json  mid360_201_134.json  mid360_202.json  mid360_203.json  mid360_204.json  mid360_8.json  mid360_8_103.json  mid360_config.json  mid360_single.json
data/caffe/: Makefile.config
data/calibration/: brio_1280x720.xml  brio_640x480.cfg  brio_640x480.xml  sp360-1440.xml
data/exiftool/: example.config
data/kiss/: apmCopter.kiss  apmRover.kiss  hm.kiss  sf40.kiss
data/orb_slam/: logicool_brio_640x360.yaml
data/orb_slam2/: general.yaml  logicool_brio.yaml
data/output/: highway20161213_nDiv=180_handy.sf40raw  scimus20161213_nDiv=180_alt.sf40raw  scimus20161213_nDiv=180_free.sf40raw  scimus20161213_nDiv=180_rec.sf40raw  scimus20161213_nDiv=180_rec_yaw.sf40raw  scimus_nDiv=180.sf40raw  scimus_nDiv=180_2.sf40raw  scimus_nDiv=180_V.sf40raw  scimus_nDiv=180_free_fast.sf40raw  scimus_nDiv=180_free_fast_.sf40raw  scimus_nDiv=360.sf40raw  scimus_nDiv=60.sf40raw  scimus_nDiv=90.sf40raw  sf40.test  test.txt
doc/JetsonTX1/: build.md
doc/Ubuntu16.04LTS/: setup.md
docs/: CNAME  YOLO26detectONNX.md  _config.yml  config.md  deploy.md  misc.md  nginx.md  opencv.md  optimize.md  ros2_common.sh  rtklib.md  setup.md  test.md  tools.md  um982.md  unicore.md
docs/3D/: imgui_viewer.md
docs/RaspberryPi/: CM4_dt_blob.7z  INA219.py  ok_rpi.sh
docs/archive/: compatibility.txt
firmware/arduCanbus/: arduCanbus.ino
firmware/arduPWM/: arduPWM.ino  arduServo.ino
firmware/arduino/: arduCanbus.ino  arduEtherServo.ino  arduGPSbeacon.ino  arduLED.ino  arduMotorPWM.ino  arduOK.h  arduPWM2BLC.ino  arduPWM2Lev.ino  arduPWMio.ino  arduRover.ino  arduSBUS.ino  arduSBUSuart.ino  arduServo.ino
html/: 3Dtransform.html  console.html  debug.html  gw.html  photo.html  record.html
html/GSV/: gsv.html
html/LivoxScanner/: LivoxScanner.html
html/WScontrol/: LCalign.html  WSconsole.html  apdrive.html  geofence.html
html/archive/: 3Dtransform.html  photo.html
html/ropewayScan/: rwsCtrl.html
html/swarmSearch/: debug.html  map.html  swarm.html  swarmCtrl.html  swarmList.html
jsonCfg/: DDSM.json  Detectors.json  GeoFence.json  HiKthermal.json  ImGUI.json  Open3D.kiss  OpenCL.kiss  RPi_video.kiss  RTCMcast.json  _ADIO_EBYTE.json  _ADIO_EBYTE.kiss  _AP_actuator.kiss  _ArUco.kiss  _BenewakeTF03.kiss  _CAN.kiss  _CamCalib.kiss  _Camera.json  _Chilitags.kiss  _DDSM.json  _DNNclassifier.kiss  _DNNtext.kiss  _DenseFlow.kiss  _Detectors.kiss  _FastLivo.json  _Feetech.kiss  _GDimgUploader.kiss  _GPS.kiss  _GeometryViewer.kiss  _HYMCU_RS485.kiss  _HandKey.kiss  _IAI.json  _IAI.kiss  _ImgFilter.kiss  _LCalign.json  _LCalignCfg.json  _LIVcalib.json  _Lane.kiss  _LeddarVu.kiss  _Livox2.kiss  _Mavlink.json  (+34 more)
jsonCfg/test/: JsonBaseUDP.kiss  WebSocket.kiss  apMavlinkFollow.kiss
kiss/: .hm.kiss.swp  AGPS.kiss  BBoxCutOut.kiss  GUIwindow.kiss  Open3D.kiss  OpenCL.kiss  RPi_video.kiss  TGRS.kiss  _ADIO_EBYTE.kiss  _AP_actuator.kiss  _ArUco.kiss  _CAN.kiss  _CamCalib.kiss  _Camera.json  _Camera.kiss  _DDSM.json  _DDSM.kiss  _DNNclassifier.kiss  _DNNtext.kiss  _Detectors.kiss  _Feetech.kiss  _GPS.kiss  _GeometryViewer.kiss  _HYMCU_RS485.kiss  _HandKey.kiss  _IAI.kiss  _ImgFilter.kiss  _Lane.kiss  _Livox.kiss  _Livox2.kiss  _Mavlink.kiss  _ORB_SLAM.kiss  _OrientalMotor.kiss  _PCgrid.kiss  _ROS_fastLio.kiss  _RealSense.kiss  _S6H4D.kiss  _SAT_Qk.kiss  _Scepter.kiss  _SocketCAN.kiss  (+43 more)
kiss/app/: 3Dscan.kiss  3DscanCalib.kiss  3DscanCalibCam.kiss  3DscanCalibOfs.kiss  3DscanVzense.kiss  ARarea.kiss  ARmeasure.kiss  AutoPilotCar.kiss  Fourier.kiss  LivoxScanAuto.kiss  LivoxScanner.kiss  PWMrover.kiss  RCrover.kiss  SbusRover.kiss  SelfDrivingCar.kiss  Solver.kiss  VzScan.kiss  VzScanAuto.kiss  VzScanCalib.kiss  _ANR.kiss  _AgileX.kiss  _DepthCam.kiss  _DroneBox.kiss  _GDcam.kiss  _GSVcollisionAvoid.kiss  _HiphenRGB.kiss  _MultiRsScan.kiss  _PCcalib.kiss  _PCclient.kiss  _PCscan.kiss  _PCscanClient.kiss  _PCserver.kiss  _PLC.kiss  _Ropeway.kiss  _Sequencer.kiss  _Sequencer2.kiss  _ShopCam.kiss  _SortingBot.kiss  _SortingBotClient.kiss  _SortingBotServer.kiss  (+69 more)
kiss/archive/: BBoxCutOut.kiss  _ANR.kiss  _GDcam.kiss  _InnfosGluon.kiss  _LabArm.kiss  _MultiRsScan.kiss  _OpenALPR.kiss  _PCclient.kiss  _Pylon.kiss  _Sequencer.kiss  _Sequencer2.kiss  apCopter_RPi.kiss  apCopter_RPi_Leddar.kiss  apCopter_followClient.kiss  apRover_BR.kiss  apRover_BR_backup.kiss  apRover_KU.kiss  apRover_UT.kiss  apRover_picking.kiss  apRover_tag.kiss  rover.kiss
kiss/backup/: BBoxCutOut.kiss  _ANR.kiss  _HiphenRGB.kiss  _Sequencer.kiss  _Sequencer2.kiss  _ShopCam.kiss  _SortingBotClient.kiss  _SortingBotServer.kiss  apCopter.kiss  ext.kiss  (+16 more)
python/: detectNetCam.py  gdUpload.py  readme.md
setup/: EclipseDevSetup  eclipse_compile_setting_Release.xml  setup_TX1.txt  setup_Ubuntu16.04LTS.txt
src/: AutoPilot.cpp  AutoPilot.h  CamDenseFlow.cpp  CamDenseFlow.h  CamFrame.cpp  CamFrame.h  CamInput.cpp  CamInput.h  CamMarkerDetect.cpp  CamMarkerDetect.h  CamMonitor.cpp  CamMonitor.h  CamSparseFlow.cpp  CamSparseFlow.h  CamStereo.cpp  CamStereo.h  CamStream.cpp  CamStream.h  CameraVision.cpp  CameraVision.h  Config.cpp  Config.h  FastDetector.cpp  FastDetector.h  FileIO.h  JSON.cpp  JSON.h  JSONParser.cpp  JSONParser.h  LAB.cpp  Logger.cpp  MavlinkInterface.cpp  MavlinkInterface.h  MultiThreadBase.cpp  MultiThreadBase.h  NNClassifier.cpp  NNClassifier.h  ObjectDetector.cpp  ObjectDetector.h  ObjectLocalizer.cpp  (+29 more)
test/: _TestBase.cpp  _TestBase.h
(+3107 files in other folders)
